--- a/index.html
+++ b/index.html
@@ -198,10 +198,19 @@
 <body>
 
 <!-- Top Ad Banner -->
+<!-- Top Ad Banner -->
 <div id="ad-container">
-    <div style="flex: 1; text-align: center; padding: 0 5px;">
-        <iframe data-aa="2428034" src="//acceptable.a-ads.com/2428034/?size=Adaptive" style="border:0; padding:0; width:100%; height:auto; overflow:hidden; display: block; margin: auto;"></iframe>
-    </div>
+    <!-- BEGIN AADS AD UNIT 2428141 -->
+
+<div id="frame" style="width: 100%;margin: auto;position: relative; z-index: 99998;">
+
+          <iframe data-aa='2428141' src='//acceptable.a-ads.com/2428141/?size=Adaptive'
+
+                            style='border:0; padding:0; width:70%; height:auto; overflow:hidden;display: block;margin: auto'></iframe>
+
+        </div>
+
+<!-- END AADS AD UNIT 2428141 -->
 </div>
 
 <!-- Game Page -->
@@ -255,11 +264,28 @@
 <div id="ad-popup-overlay">
     <div id="ad-popup-content">
         <button id="close-ad-btn">×</button>
-        <div id="frame" style="width: 100%; margin: auto; position: relative; z-index: 99998; display: flex; flex-direction: column; gap: 5px;">
-            <!-- Ads are stacked vertically due to flex-direction: column -->
-            <iframe data-aa='2428035' src='//acceptable.a-ads.com/2428035/?size=Adaptive' style='border:0; padding:0; width:100%; height:auto; overflow:hidden; display: block; margin: auto;'></iframe>
-            <iframe data-aa='2428095' src='//acceptable.a-ads.com/2428095/?size=Adaptive' style='border:0; padding:0; width:100%; height:auto; overflow:hidden; display: block; margin: auto;'></iframe>
+<div id="frame" style="width: 100%;margin: auto;position: relative; z-index: 99998;">
+
+          <iframe data-aa='2428143' src='//acceptable.a-ads.com/2428143/?size=Adaptive'
+
+                            style='border:0; padding:0; width:70%; height:auto; overflow:hidden;display: block;margin: auto'></iframe>
+
         </div>
+
+<!-- END AADS AD UNIT 2428143 -->
+
+<!-- BEGIN AADS AD UNIT 2428145 -->
+
+<div id="frame" style="width: 100%;margin: auto;position: relative; z-index: 99998;">
+
+          <iframe data-aa='2428145' src='//acceptable.a-ads.com/2428145/?size=Adaptive'
+
+                            style='border:0; padding:0; width:70%; height:auto; overflow:hidden;display: block;margin: auto'></iframe>
+
+        </div>
+
+<!-- END AADS AD UNIT 2428145 -->
+</div>
     </div>
 </div>
 
