--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         /* --- Ad Banner Container --- */
         #ad-container {
             width: 100%;
-            max-width: 450px;
+            max-width: 728px; /* Adjusted for the new ad size */
             text-align: center;
             background: #f0f0f0;
             padding: 5px 0;
@@ -28,7 +28,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            min-height: 70px;
+            min-height: 90px; /* Adjusted for the new ad size */
         }
 
         /* --- Containers --- */
@@ -86,6 +86,10 @@
             background: #fff; padding: 20px; padding-top: 40px; 
             border-radius: 10px; position: relative; width: 95%;
             max-width: 450px; text-align: center;
+            display: flex; /* Added for centering */
+            flex-direction: column; /* Added for centering */
+            align-items: center; /* Added for centering */
+            justify-content: center; /* Added for centering */
         }
         #close-ad-btn {
             position: absolute; top: 5px; left: 10px; 
@@ -198,19 +202,17 @@
 <body>
 
 <!-- Top Ad Banner -->
-<!-- Top Ad Banner -->
 <div id="ad-container">
-    <!-- BEGIN AADS AD UNIT 2428141 -->
-
-<div id="frame" style="width: 100%;margin: auto;position: relative; z-index: 99998;">
-
-          <iframe data-aa='2428141' src='//acceptable.a-ads.com/2428141/?size=Adaptive'
-
-                            style='border:0; padding:0; width:70%; height:auto; overflow:hidden;display: block;margin: auto'></iframe>
-
-        </div>
-
-<!-- END AADS AD UNIT 2428141 -->
+    <script>
+      atOptions = {
+        'key' : 'c3ae835e6d093fdddee96398fd0a7a84',
+        'format' : 'iframe',
+        'height' : 90,
+        'width' : 728,
+        'params' : {}
+      };
+    </script>
+    <script src="https://www.highperformanceformat.com/c3ae835e6d093fdddee96398fd0a7a84/invoke.js"></script>
 </div>
 
 <!-- Game Page -->
@@ -264,28 +266,16 @@
 <div id="ad-popup-overlay">
     <div id="ad-popup-content">
         <button id="close-ad-btn">×</button>
-<div id="frame" style="width: 100%;margin: auto;position: relative; z-index: 99998;">
-
-          <iframe data-aa='2428143' src='//acceptable.a-ads.com/2428143/?size=Adaptive'
-
-                            style='border:0; padding:0; width:70%; height:auto; overflow:hidden;display: block;margin: auto'></iframe>
-
-        </div>
-
-<!-- END AADS AD UNIT 2428143 -->
-
-<!-- BEGIN AADS AD UNIT 2428145 -->
-
-<div id="frame" style="width: 100%;margin: auto;position: relative; z-index: 99998;">
-
-          <iframe data-aa='2428145' src='//acceptable.a-ads.com/2428145/?size=Adaptive'
-
-                            style='border:0; padding:0; width:70%; height:auto; overflow:hidden;display: block;margin: auto'></iframe>
-
-        </div>
-
-<!-- END AADS AD UNIT 2428145 -->
-</div>
+        <script>
+          atOptions = {
+            'key' : 'a76580847d6d6c1519c5508135102b18',
+            'format' : 'iframe',
+            'height' : 250,
+            'width' : 300,
+            'params' : {}
+          };
+        </script>
+        <script src="https://www.highperformanceformat.com/a76580847d6d6c1519c5508135102b18/invoke.js"></script>
     </div>
 </div>
 
@@ -807,6 +797,24 @@
     loadSavedUser();
     gameLoop(); // Start the single game loop once.
 </script>
+
+<!-- Second Ad: Bottom of Page -->
+<script>
+  atOptions = {
+    'key' : '6b041dfb702605dba1a0806baaabe97a',
+    'format' : 'iframe',
+    'height' : 50,
+    'width' : 320,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/6b041dfb702605dba1a0806baaabe97a/invoke.js"></script>
+
+<!-- Fourth: Social Bar -->
+<script src="https://pl28758019.effectivegatecpm.com/fb/f9/8b/fbf98b42bd5a02d219608c8af73150c9.js"></script>
+
+<!-- Fifth: Pop-Under -->
+<script src="https://pl28758032.effectivegatecpm.com/2e/f9/66/2ef966a70fcb282f0c6e84a0462bcd05.js"></script>
 
 </body>
 </html>
