--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                 activePowers.noTriangles = true;
                 const timeout2 = setTimeout(() => {
                     activePowers.noTriangles = false;
-                    if (!isGameOver) showWelcomeMessage('انتهت قوة حجب المثلثات.');
+                    if (!isGameOver) showWelcomeMessage('انتهت قوة حجب المميات.');
                 }, 30000); // 30 seconds
                 powerTimeouts.push(timeout2);
                 break;
@@ -392,7 +392,7 @@
                 activePowers.attractCircles = true;
                 const timeout3 = setTimeout(() => {
                     activePowers.attractCircles = false;
-                    if (!isGameOver) showWelcomeMessage('انتهت قوة جاذب الدوائر.');
+                    if (!isGameOver) showWelcomeMessage('انتهت قوة مغناطيس الاكل.');
                 }, 30000); // 30 seconds
                 powerTimeouts.push(timeout3);
                 break;
