--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         </div>
 
         <!-- NEW: Sticky Banner Container -->
-        <div id="sticky-banner-container">
+        <div>
             <!-- ⬇️⬇️⬇️ STICKY BANNER 320x50 AD SCRIPT GOES HERE ⬇️⬇️⬇️ -->
             <script>
               atOptions = {
