--- a/index.html
+++ b/index.html
@@ -86,18 +86,15 @@
         #controls button { width: 80px; height: 60px; font-size: 36px; border-radius: 10px; background: rgba(255,255,255,.4); border: 2px solid rgba(255,255,255,.7); }
         
         #sticky-banner-container {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 50px;
-            background: #111; /* Fallback background */
-            z-index: 4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
-        }
+    /* position: fixed; */  /* تم التعطيل */
+    /* bottom: 20px; */ /* تم التعطيل */
+    /* left: 50%; */ /* تم التعطيل */
+    /* transform: translateX(-50%); */ /* تم التعطيل */
+    /* z-index: 1000; */ /* تم التعطيل */
+    margin-top: 20px; /* إضافة هامش علوي لترك مسافة */
+    text-align: center; /* لتوسيط الإعلان */
+}
+
 
         /* --- Smart Interstitial Ad --- */
         #interstitial-ad-overlay {
