--- a/index.html
+++ b/index.html
@@ -199,20 +199,22 @@
         </div>
 
         <!-- NEW: Sticky Banner Container -->
-        <div>
-            <!-- ⬇️⬇️⬇️ STICKY BANNER 320x50 AD SCRIPT GOES HERE ⬇️⬇️⬇️ -->
-            <script>
-  atOptions = {
-    'key' : '6b041dfb702605dba1a0806baaabe97a',
-    'format' : 'iframe',
-    'height' : 50,
-    'width' : 320,
-    'params' : {}
-  };
-            </script>
-            <script src="https://www.highperformanceformat.com/6b041dfb702605dba1a0806baaabe97a/invoke.js"></script>
-            <!-- ⬆️⬆️⬆️ END OF AD SCRIPT ⬆️⬆️⬆️ -->
-        </div>
+        <!-- NEW: Sticky Banner Container -->
+<div id="sticky-banner-container">
+    <!-- ⬇️⬇️⬇️ STICKY BANNER 320x50 AD SCRIPT GOES HERE ⬇️⬇️⬇️ -->
+    <script>
+      atOptions = {
+        'key' : '6b041dfb702605dba1a0806baaabe97a',
+        'format' : 'iframe',
+        'height' : 50,
+        'width' : 320,
+        'params' : {}
+      };
+    </script>
+    <script src="https://www.highperformanceformat.com/6b041dfb702605dba1a0806baaabe97a/invoke.js"></script>
+    <!-- ⬆️⬆️⬆️ END OF AD SCRIPT ⬆️⬆️⬆️ -->
+</div>
+
     </div>
 </div>
 
