--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
 <head>
-    <meta name="monetag" content="7c8a5381880da2d1279fc5ededb73d5d">
+    <meta name="monetag" content="7c8a5381880da2d1279fc5ededb73d5d"></meta>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>YMY COIN</title>
