--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="monetag" content="7c8a5381880da2d1279fc5ededb73d5d"></meta>
+    <script src="https://quge5.com/88/tag.min.js" data-zone="212936" async data-cfasync="false"></script>
     <title>YMY COIN</title>
     <style>
         /* --- General Styles --- */
