--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
         .power-actions { display: flex; align-items: center; gap: 10px; }
         .item-count { font-size: 15px; font-weight: normal; color: #333; }
     </style>
-    <meta name="monetag" content="7c8a5381880da2d1279fc5ededb73d5d"></meta>
+    <meta content='7c8a5381880da2d1279fc5ededb73d5d' name='monetag'/>
+    
 </head>
 <body>
 
