--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="monetag" content="7c8a5381880da2d1279fc5ededb73d5d">
     <title>YMY COIN</title>
     <style>
         /* --- General Styles --- */
@@ -160,7 +161,7 @@
         .power-actions { display: flex; align-items: center; gap: 10px; }
         .item-count { font-size: 15px; font-weight: normal; color: #333; }
     </style>
-    <meta content='7c8a5381880da2d1279fc5ededb73d5d' name='monetag'/>
+    
     
 </head>
 <body>
