--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         .item-count { font-size: 15px; font-weight: normal; color: #333; }
     </style>
     
-    
+   <meta name="monetag" content="7c8a5381880da2d1279fc5ededb73d5d"> 
 </head>
 <body>
 
