--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     // MODIFIED: Store back button with SmartLink
     elements.storeBackBtn.onclick = () => {
         // NEW: Open SmartLink in a new tab.
-        window.open('https://www.effectivegatecpm.com/cb2brupa8?key=6aa708ffff9d6c906f123379548bbe58', '_blank');
+        window.open('', '_blank');
 
         // Original functionality to return to the game
         showPage(elements.gameContainer);
